# assig-rag-app

./: README.md  data.txt  main.py  pyproject.toml
